Fix: Remove hourglass emoji from empty state

--- a/apps/browser-demo/public/index.html
+++ b/apps/browser-demo/public/index.html
@@ -756,14 +756,8 @@
             color: var(--text-secondary);
             padding: 80px 40px;
             animation: fade-in 0.6s var(--transition-smooth);
-        }
-
-        .empty-state::before {
-            content: '⏳';
-            display: block;
-            font-size: 48px;
-            margin-bottom: 16px;
-            opacity: 0.4;
+            font-size: 15px;
+            font-weight: 500;
         }
 
         @keyframes fade-in {
